feat: add role in AuthResponse
